...
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_term_title" />

                <EditText
                    android:id="@+id/editTextTermTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Title" />

...

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/createTermButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetLeft="50dp"
                    android:text="@string/create_term_button" />

            </TableRow>
...
